# Ai_agents

./: README.md  crew.ipynb
server/: README.md  pyproject.toml
server/app/: main.py
server/config/: config.yaml
vivid-boilerplate/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
vivid-boilerplate/src/: index.css
vivid-boilerplate/src/components/: About.jsx  Button.jsx  CTA.jsx  Contact.jsx  FAQ.jsx  Features.jsx  Footer.jsx  Hero.jsx  Navbar.jsx  Pricing.jsx  SectionTitle.jsx  Services.jsx  Stats.jsx  Testimonials.jsx
vivid-boilerplate/src/data/: siteConfig.js
vivid-boilerplate/src/layouts/: Container.jsx
vivid-boilerplate/src/pages/: Home.jsx
